QE-521 Fix overflowing adventure-options

--- a/wp-content/themes/quarkexpeditions/src/front-end/components/dates-rates/css/cards.scss
+++ b/wp-content/themes/quarkexpeditions/src/front-end/components/dates-rates/css/cards.scss
@@ -38,7 +38,7 @@
 			min-width: calc(50vw + var(--wrap-width) / 2 - var(--grid-col-gutter));
 		}
 
-		&+& {
+		& + & {
 			margin-top: var(--spacing-5);
 		}
 	}
@@ -174,7 +174,7 @@
 		min-width: 0;
 		text-align: left;
 
-		&+& {
+		& + & {
 			border-left: 1px solid var(--color-gray-20);
 			padding-left: var(--spacing-5);
 		}
@@ -187,7 +187,9 @@
 	&__adventure-options-column-list {
 		list-style: none;
 		padding-left: 0;
-		display: flex;
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+		gap: var(--spacing-4) var(--spacing-5);
 	}
 
 	&__info {
@@ -199,12 +201,7 @@
 		display: flex;
 		align-items: center;
 		gap: var(--spacing-2);
-		margin-right: var(--spacing-5);
 		min-width: 180px;
-
-		&:last-child {
-			margin-right: 0;
-		}
 
 		&--paid #{$self}__adventure-options-item-icon {
 			background-color: var(--color-success-10);
